--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 	<!-- SEO -->
-	<title>Date the One and Only Shawna</title>
-	<meta name="description" content="Date the One and Only Shawna" />
+	<title>Date the One and Only Shawna Marie</title>
+	<meta name="description" content="Date the One and Only Shawna Marie" />
 	<meta name="robots" content="noindex, nofollow" />
 	<meta name="referrer" content="always" />
 	<meta property="og:url" content="http://dateshawna.com" />
